# obd2-core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/obd2-core/: Cargo.toml
crates/obd2-core/src/: error.rs  lib.rs
crates/obd2-core/src/adapter/: detect.rs  elm327.rs  mock.rs  mod.rs
crates/obd2-core/src/protocol/: codec.rs  dtc.rs  enhanced.rs  j1939.rs  mod.rs  pid.rs  service.rs
crates/obd2-core/src/session/: diag_session.rs  diagnostics.rs  discovery.rs  enhanced.rs  mod.rs  modes.rs  poller.rs  threshold.rs
crates/obd2-core/src/specs/: mod.rs
crates/obd2-core/src/specs/embedded/: chevy_duramax_2004_turbo.yaml  mod.rs
crates/obd2-core/src/store/: mod.rs
crates/obd2-core/src/transport/: ble.rs  logging.rs  mock.rs  mod.rs  serial.rs
crates/obd2-core/src/vehicle/: loader.rs  mod.rs
crates/obd2-core/tests/: business_rules.rs  integration_test.rs
crates/obd2-hw-test/: Cargo.toml
crates/obd2-hw-test/src/: compare.rs  main.rs  report.rs  runner.rs  vehicles.rs
crates/obd2-hw-test/src/tests/: capture.rs  dtcs.rs  enhanced.rs  init.rs  j1939.rs  mod.rs  monitoring.rs  pids.rs  polling.rs  protocol.rs  recovery.rs  supported.rs  vin.rs  voltage.rs
crates/obd2-store-sqlite/: Cargo.toml
crates/obd2-store-sqlite/src/: lib.rs
docs/: 2026-03-24-recording-analysis.md  AI_AGENT_GUIDE.md  FUNCTIONAL_REQUIREMENTS.md  INTEGRATION.md  haullogic-integration-spec.md
docs/functional_reference/: README.md  elm327_at_commands.md  elm327_can_configuration.md  elm327_initialization.md  elm327_j1939.md  elm327_obd_protocols.md  elm327_programmable_parameters.md  elm327_responses.md  obd2_dtc_format.md  obd2_message_format.md  sae_j1979_pids.md  sae_j1979_services.md
docs/plans/: 2026-03-22-obd2-core-design.md  2026-03-22-obd2-core-implementation.md  2026-04-09-active-execution-board.md  2026-04-09-api-migration-plan.md  2026-04-09-discovery-remediation.md  2026-04-09-hardware-parity-matrix-action-board.md  2026-04-09-hardware-parity-matrix-design.md  2026-04-09-hardware-parity-matrix-implementation.md  2026-04-09-phase-2-addressing-routing.md  2026-04-09-pre-1.0-redesign-roadmap.md  2026-04-09-reference-review-implementation-plan.md
vehicle-specs/: chevy_duramax_2004_turbo.yaml  spec_sources.yaml
