[workspace]
resolver = "2"
members = [
    "crates/obd2-core",
    "crates/obd2-store-sqlite",
    "crates/obd2-hw-test",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trepidity/obd2-core"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "io-util"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
uuid = "1"
