[package]
name = "obd2-store-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite storage backend for obd2-core"

[dependencies]
obd2-core = { path = "../obd2-core", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
